atuliazando projeto para agendador de dados meteorologicos